spacing between top links fixed

--- a/static/common/css/common.less
+++ b/static/common/css/common.less
@@ -154,6 +154,11 @@
 
       a{
         color: @baseTextColor;
+
+        & + a{
+          display: inline-block;
+          margin-left: 6px;
+        }
       }
     }
   }
